modified:   public/css/condiciones.css 	modified:   public/css/dudas.css 	modified:   public/css/registro.css 	modified:   public/css/style.css 	modified:   public/js/categorias.js 	new file:   public/js/formulario.js 	modified:   views/condiciones.ejs 	modified:   views/dudas.ejs 	modified:   views/favoritos.ejs 	modified:   views/index.ejs 	modified:   views/register.ejs 	modified:   views/templates/footer.ejs 	modified:   views/templates/navbar.ejs

--- a/public/css/condiciones.css
+++ b/public/css/condiciones.css
@@ -1,8 +1,7 @@
 /***condiciones*/
 
 .condiciones{
-    padding: 0 4rem;
-    height: auto;
+    min-height: 85vh;
 }
 .container-conds{
     margin: 50px 6rem;
