--- a/views/condiciones.ejs
+++ b/views/condiciones.ejs
@@ -1,5 +1,5 @@
 <%- include('templates/navbar') %> 
-    <section class="condiciones">
+    <section class="condiciones container">
         <h2>Términos y condiciones</h2>
         <div class="container-conds">
             <h3>Introducción</h3>
