--- a/views/dudas.ejs
+++ b/views/dudas.ejs
@@ -1,5 +1,5 @@
 <%- include('templates/navbar') %>
-    <section class="dudas">
+    <section class="dudas container">
         <div class="search-dudas">
             <h2>Encuentra las dudas que tienes en esta sección creada para ti</h2>
             <input class="search-input" type="search" placeholder="Ingresa una palabra clave">
