--- a/views/favoritos.ejs
+++ b/views/favoritos.ejs
@@ -1,3 +1,5 @@
 <%- include('templates/navbar') %>
-
+<section class="container">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur aliquid maiores quasi quidem quod odit accusantium quaerat alias quisquam dolore. Quae quod quaerat quasi nesciunt labore quis ullam, qui odio?</p>
+</section>
 <%- include('templates/footer') %> 
