--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('templates/navbar') %> 
-    <main>
+    <main class="container">
         <section class="slide-contenedor">
             <!-- <div class="slides">
                 <div><img src="resources/img/Banner-warique 1.png" alt=""></div>
