--- a/public/css/registro.css
+++ b/public/css/registro.css
@@ -1,14 +1,11 @@
 .register{
-    width: 100vw;
     height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
     padding: 0;
 }
 .container-rg{
-    width: 80vw;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -22,35 +19,78 @@
     margin: auto;
     align-items: center;
 }
-.formulario input{
+.formulario{
+    --form-ok-color:#4caf50;
+    --form-error-color:#f44336;
+}
+.formulario .input{
     border: 1.5px solid #3D4E54;
     box-sizing: border-box;
     border-radius: 4px;
-    max-width: 500px;
-    min-width: 400px;
+    min-width: 35vw;
     height: 50px;
     margin: 0 24px 16px 24px;
 }
-.registro-rq{
+.formulario .registro-rq{
+    min-width: 35vw;
+    margin-left: 20px;
+    margin-right: 40px;
+    position: relative;
     display: flex;
-    flex-flow: column wrap;
-    width: 100%;
+    flex-direction: column;
 }
-.registro-rq label{
-    margin: 0 24px;
+.registro-rq .checks{
+    display: flex;
+    padding: 0;
+    text-align: left;
+    align-items: center;
+    justify-content: start;
+}
+.formulario .registro-rq input{
+    height: 20px;
+    margin: 0 10px;
+}
+.registro-rq div p{
+    margin: 0;
 }
 
 .submit-btn{
     background-color: var(--primary);
     border-radius: 100px;
-    max-width: 500px;
-    min-width: 400px;
+    min-width: 35vw;
     border: none;
     height: 35px;
     color: var(--white) ;
     margin: 10px 20px;
     cursor: pointer;
 }
+/****msg validaciones **/
+.formulario *::placeholder{
+    color: #555;
+}
+
+.formulario [required]:valid{
+    border: thin solid var(--form-ok-color);
+}
+.formulario [required]:invalid{
+    border: thin solid var(--form-error-color);
+}
+.contact-form-error{
+    margin-top: -1rem;
+    font-size: 80%;
+    background-color: var(--form-error-color);
+    color: #fff;
+    transition: all 800ms ease;
+
+}
+.formulario.is-active{
+    display: block;
+    animation:show-message 1s 1 normal 0s ease-out both;
+}
+.none{
+    display: none;
+}
+
 @media (max-width:950px){
     .register{
         height: auto;
