--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,9 +15,16 @@ body{
     padding: 0;
     font-size: 16px;
     font-family: sans-serif;
-    position: relative;
-}
+    box-sizing: border-box;
+    display: grid;
+    min-height: 100vh;
+    grid-template-rows: auto 1fr auto;
 
+}
+.container{
+    width: 85vw;
+    margin: auto;
+}
 a{
     text-decoration: none;
     color: inherit;
@@ -50,28 +57,26 @@ a{
     flex-direction: row;
 }
 .navbar{
-    width: 100%;
     display: flex;
     justify-content: space-between;
 }
+
 .sabores{
     display: none;
 }
 .items-nav{
     display: flex;
-    justify-content: center;
+    padding: 0;
+    justify-content: start;
     align-items: center;
-    width: 550px;
 }
 .items-nav a{
-display: flex;
-justify-content: center;
-align-items: center;
-padding: 0 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 120px;
 }
-.items-nav a img{
-    margin: 0 10px;
-}
+
 
 main{
     height: auto;
@@ -134,7 +139,7 @@ main{
 /**cards*/
 .cards{
     height: auto;
-    width: 90vw;
+    width: inherit;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 350px));
@@ -248,13 +253,20 @@ main{
 }
 /**footer*/
 footer{
-    display: flex;
-    box-shadow: 0 -2px 4px #3335;
-    height: 4rem;
-    position:relative;
-    bottom: 0;
     width: 100%;
-    justify-content: space-evenly;
+    margin: auto;
+    box-shadow: 0 -2px 4px #3335;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer{
+    display: flex;
+    height: 4rem;
+    padding: 0;
+    bottom: 0;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -449,3 +461,5 @@ footer{
     
     
 }
+
+/*****registro*/
