--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,15 +1,19 @@
 <footer>
-    <p>@2022 Wariques.pe. Todos los derechos reservados</p>
-    <p>Hecho con ❤ por los wariqueros</p>
-    <div class="links-footer">
-        <a href="#"><img src="resources/img/icon/facebook 1.png" alt=""></a>
-        <a href="#"><img src="resources/img/icon/instagram 1.png" alt=""></a>
-        <a href="#"><img src="resources/img/icon/youtube 1.png" alt=""></a>
+    <div class="footer container">
+        <p>@2022 Wariques.pe. Todos los derechos reservados</p>
+        <p>Hecho con ❤ por los wariqueros</p>
+        <div class="links-footer">
+            <a href="#"><img src="resources/img/icon/facebook 1.png" alt=""></a>
+            <a href="#"><img src="resources/img/icon/instagram 1.png" alt=""></a>
+            <a href="#"><img src="resources/img/icon/youtube 1.png" alt=""></a>
+        </div>
     </div>
+    
 </footer>
 <script src="resources/js/script.js" type="module"></script>
     <script src="resources/js/hamburguerMenu.js"></script>
     <script src="resources/js/categorias.js"></script>
     <script src="resources/js/menuOption.js"></script>
+    <script src="resources/js/formulario.js"></script>
 </body>
 </html>
