--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -15,9 +15,8 @@
     <header class="header">
         <div class="logo"><img src="resources/img/svg/logo.svg" alt=""></div>
         <div class="bg-navbar">
-            
         </div>
-        <nav class="navbar ">
+        <nav class="navbar container">
             <div class="options-mobil">
                 <button data-button="button5" class="menu-link active-options">Menu</button>
                 <button data-button="button6" class="menu-link">Sabores</button>
@@ -84,7 +83,6 @@
                     <h3>Más</h3>
                 </a>
             </div>
-            
         </nav>
         
         <div class="btn-menu"><img src="resources/img/svg/menu.svg" alt=""></div>
